--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,7 +30,6 @@ a {
   text-decoration: none;
   color: black;
   font-weight: bold;
-
 }
 
 .header {
@@ -95,7 +94,7 @@ a {
   border-radius: 5px;
   background-color: rgb(77, 118, 91);
   color: white;
-  font-weight:500;
+  font-weight: 500;
 }
 .first-middle-content {
   background-color: white;
