--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,13 @@ body {
   flex: 1;
 }
 
+.bordered-image img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
 .header-logo {
   width: 80px;
   height: auto;
@@ -46,9 +53,18 @@ a {
 }
 
 .bordered-image {
-  border: 2px solid black;
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 300px;
+}
+
+.small-description-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
 }
 
 .upper-content {
@@ -65,26 +81,37 @@ a {
 }
 
 .main-image {
-  width: 350px;
+  min-width: 350px;
   height: auto;
 }
 
+.site-header {
+  font-size: 35px;
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
 .subheader {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 20px;
+}
+
+.image-description {
+  margin-top: 10px;
+  /*padding: 0 50px;*/
+}
+
+.site-description {
+  font-size: 18px;
 }
 
 .images-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
-}
-
-.site-header {
-  font-size: 30px;
-  font-weight: bold;
-  margin-bottom: 8px;
+  gap: 50px;
 }
 
 .sign-up-button {
